# vs_codex

./: .gitignore  .gitignore.REMOVED.git-id  .pre-commit-config.yaml  .pre-commit-config.yaml.REMOVED.git-id  LICENSE  LICENSE.REMOVED.git-id  README.md  README.md.REMOVED.git-id  noxfile.py  noxfile.py.REMOVED.git-id  poetry.lock.REMOVED.git-id  pyproject.toml  pyproject.toml.REMOVED.git-id
.devcontainer/: Dockerfile.REMOVED.git-id  README.md  README.md.REMOVED.git-id  build.py.REMOVED.git-id  devcontainer.json  devcontainer.json.REMOVED.git-id
.github/: README.md.REMOVED.git-id
.github/workflows/: README.md  checks.yml.REMOVED.git-id  ci.yml  ci.yml.REMOVED.git-id  pdoc.yml  pdoc.yml.REMOVED.git-id  pre-commit.yml.REMOVED.git-id  pytest.yml  pytest.yml.REMOVED.git-id  python-app.yml  python-app.yml.REMOVED.git-id  python-package.yml  python-package.yml.REMOVED.git-id  sphinx.yml  static.yml  static.yml.REMOVED.git-id
.nox/: README.md
ci/: scripts.py  scripts.py.REMOVED.git-id
ci/configs/: .coveragerc.REMOVED.git-id  .pylintrc.REMOVED.git-id  .style.yapf.REMOVED.git-id  noxfile.REMOVED.git-id
ci/scripts/: run_coverage.py.REMOVED.git-id  run_docs.py  run_docs.py.REMOVED.git-id  run_profile.py.REMOVED.git-id
ci/templates/: config.mako.REMOVED.git-id  credits.mako.REMOVED.git-id  css.mako  css.mako.REMOVED.git-id  head.mako  head.mako.REMOVED.git-id  logo.mako  logo.mako.REMOVED.git-id
containers/: README.md  README.md.REMOVED.git-id  base.def.REMOVED.git-id  miniconda.def.REMOVED.git-id
containers/apptainer/: README.md
containers/docker/: README.md
docs/: README.md
docs/pics/: logo.gif.REMOVED.git-id  logo.gif.REMOVED.git-id.REMOVED.git-id  program_logo.png.REMOVED.git-id  self_hosted_runner.png.REMOVED.git-id
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_static/css/: custom.css
docs/source/pages/: authors.rst  development.rst  installation.rst  metrics.rst  overview.rst  references.rst  user_guide.rst
docs/source/pages/api/: src.ci.rst  src.rst  src.tests.rst
docs/source/pages/development/: apptainer.rst  docker.rst  index.rst  logging.rst  pytest.rst  vscode.rst
docs/source/pages/metrics/: index.rst  scalene.rst  (+4 more)
src/: README.md  README.md.REMOVED.git-id  __init__.py.REMOVED.git-id  main.py  main.py.REMOVED.git-id
src/ci/: README.md  README.md.REMOVED.git-id  __init__.py  __init__.py.REMOVED.git-id  utils.py  utils.py.REMOVED.git-id
src/log/: __init__.py  logger.py
src/tests/: README.md  README.md.REMOVED.git-id
test/: basic_test.py.REMOVED.git-id
tests/: README.md
