# Example configuration for Black.

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.nox
  | \docs
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "vs_codex"
version = "0.1.0"
description = ""
authors = ["W. Li <william.li1@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
nox = "*"
numpy = "*"
pandas = "*"
pdoc = "*"
pre-commit = "*"
pytest = "*"
scalene = "*"
torch = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
